// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link render correctly with bad variant 1`] = `
<DocumentFragment>
  .cache-i4p6cb-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-i4p6cb-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-i4p6cb-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-i4p6cb-StyledLink:hover,
.cache-i4p6cb-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
}

.cache-i4p6cb-StyledLink:hover::after,
.cache-i4p6cb-StyledLink:focus::after {
  background-color: #4a4f62;
}

.cache-i4p6cb-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-i4p6cb-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 1`] = `
<DocumentFragment>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with href props 2`] = `
<DocumentFragment>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
  >
    <svg
      class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
      viewBox="0 0 16 16"
    >
      <path
        d="M5.29289 8.70735C4.90237 8.31683 4.90237 7.68366 5.29289 7.29314L9.29289 3.29314C9.68342 2.90261 10.3166 2.90261 10.7071 3.29314C11.0976 3.68366 11.0976 4.31683 10.7071 4.70735L7.41421 8.00024L10.7071 11.2931C11.0976 11.6837 11.0976 12.3168 10.7071 12.7074C10.3166 13.0979 9.68342 13.0979 9.29289 12.7074L5.29289 8.70735Z"
      />
    </svg>
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1gxgwfv-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1gxgwfv-StyledIcon-sizeStyles.cache-1gxgwfv-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
    <svg
      class="sc-ui-icon etwatq50 cache-1gxgwfv-StyledIcon-sizeStyles"
      viewBox="0 0 16 16"
    >
      <path
        d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
      />
    </svg>
  </a>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1vxww7r-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-14vhymm-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.cache-14vhymm-StyledIcon-sizeStyles.cache-14vhymm-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
    <span
      class="cache-1vxww7r-StyledExternalIconContainer e4bq1r52"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-14vhymm-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1vxww7r-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-14vhymm-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.cache-14vhymm-StyledIcon-sizeStyles.cache-14vhymm-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
    <span
      class="cache-1vxww7r-StyledExternalIconContainer e4bq1r52"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-14vhymm-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with no variant 1`] = `
<DocumentFragment>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with sizes 1`] = `
<DocumentFragment>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
  ,
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-b1bqd8-StyledText-StyledText {
  color: #4a4f62;
  font-size: 14px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-b1bqd8-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
  ,
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1vxww7r-StyledExternalIconContainer {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.cache-14vhymm-StyledIcon-sizeStyles {
  fill: currentColor;
  height: 14px;
  width: 14px;
  min-width: 14px;
  min-height: 14px;
}

.cache-14vhymm-StyledIcon-sizeStyles.cache-14vhymm-StyledIcon-sizeStyles {
  vertical-align: middle;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
    <span
      class="cache-1vxww7r-StyledExternalIconContainer e4bq1r52"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-14vhymm-StyledIcon-sizeStyles"
        viewBox="0 0 24 24"
      >
        <path
          d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
        />
      </svg>
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render danger 1`] = `
<DocumentFragment>
  .cache-1sw0fb-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #a6102d;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-1sw0fb-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-1sw0fb-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-1sw0fb-StyledLink:hover,
.cache-1sw0fb-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #a6102d;
}

.cache-1sw0fb-StyledLink:hover::after,
.cache-1sw0fb-StyledLink:focus::after {
  background-color: #a6102d;
}

.cache-1sw0fb-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-1sw0fb-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render info 1`] = `
<DocumentFragment>
  .cache-fpuvje-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #1a4dbf;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-fpuvje-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-fpuvje-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-fpuvje-StyledLink:hover,
.cache-fpuvje-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #1a4dbf;
}

.cache-fpuvje-StyledLink:hover::after,
.cache-fpuvje-StyledLink:focus::after {
  background-color: #1a4dbf;
}

.cache-fpuvje-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-fpuvje-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render neutral 1`] = `
<DocumentFragment>
  .cache-i4p6cb-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #4a4f62;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-i4p6cb-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-i4p6cb-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-i4p6cb-StyledLink:hover,
.cache-i4p6cb-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #4a4f62;
}

.cache-i4p6cb-StyledLink:hover::after,
.cache-i4p6cb-StyledLink:focus::after {
  background-color: #4a4f62;
}

.cache-i4p6cb-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-i4p6cb-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render primary 1`] = `
<DocumentFragment>
  .cache-9jxtdz-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #390171;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-9jxtdz-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-9jxtdz-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-9jxtdz-StyledLink:hover,
.cache-9jxtdz-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #390171;
}

.cache-9jxtdz-StyledLink:hover::after,
.cache-9jxtdz-StyledLink:focus::after {
  background-color: #390171;
}

.cache-9jxtdz-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-9jxtdz-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render success 1`] = `
<DocumentFragment>
  .cache-19jcjlp-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #149a7b;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-19jcjlp-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-19jcjlp-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-19jcjlp-StyledLink:hover,
.cache-19jcjlp-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #149a7b;
}

.cache-19jcjlp-StyledLink:hover::after,
.cache-19jcjlp-StyledLink:focus::after {
  background-color: #149a7b;
}

.cache-19jcjlp-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-19jcjlp-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;

exports[`Link variant render warning 1`] = `
<DocumentFragment>
  .cache-jn19fw-StyledLink {
  background-color: transparent;
  border: none;
  padding: 0;
  color: #cc4e18;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: gap 250ms ease-out;
  transition: gap 250ms ease-out;
  gap: 8px;
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-jn19fw-StyledLink .e4bq1r51 {
  color: inherit;
}

.cache-jn19fw-StyledLink::after {
  -webkit-transition: background 250ms ease-out;
  transition: background 250ms ease-out;
  content: '';
  position: absolute;
  top: calc(100% - 1px);
  height: 1px;
  left: 0;
  right: 0;
}

.cache-jn19fw-StyledLink:hover,
.cache-jn19fw-StyledLink:focus {
  gap: 4px;
  outline: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #cc4e18;
}

.cache-jn19fw-StyledLink:hover::after,
.cache-jn19fw-StyledLink:focus::after {
  background-color: #cc4e18;
}

.cache-jn19fw-StyledLink:active::after {
  height: 2px;
}

.cache-12sgwsl-StyledText-StyledText {
  color: #4a4f62;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="cache-jn19fw-StyledLink e4bq1r50"
    href="/"
  >
    <span
      class="e4bq1r51 cache-12sgwsl-StyledText-StyledText e1tg3t120"
    >
      Hello
    </span>
  </a>
</DocumentFragment>
`;
